# Carbon-Intensity-Forecasting

./: .gitignore  README.md  main.py  pyproject.toml  test.out
alembic/: env.py
alembic/versions/: 32ed282acd5a_add_weather_data.py  70ff7ad94749_add_energy_generation_table.py  adaa0efe724c_added_energy_load.py
data/: GCAs_Aligned_Check.xlsx  GCAs_Clean.xlsx  GCAs_Final.xlsx  Wind_Stations_Analysis.xlsx  raw_geocoded_backup.csv
infrastructure/: docker-compose.yaml
scripts/: get_geographical_coords_from_gcas.py  parse_gcas.py
src/: check_arimax.py  check_model.py  check_xgboost.py  get_params_xgboost.py  main.py  publish_database_to_csv.py  test.py  test_xgboost.py
src/adapters/: entsoe_adapter.py
src/clients/: entsoe_client.py
src/core/: config.py  types.py
src/core/config/: __init__.py  entsoe_settings.py  timescale_database_settings.py
src/data_pipeline/entsoe/: __init__.py  adapter.py  config.py  gateway.py  manager.py  repository.py
src/data_pipeline/open_meteo/: adapter.py  config.py  gateway.py  manager.py  repository.py  service.py
src/database/: manager.py
src/database/models/: EnergyGeneration.py  EnergyLoad.py  WeatherData.py  __init__.py
src/database/schemas/: entsoe.py  open_meteo.py
src/forecasting/load/: arimax.py  arimax_prediction_service.py  data_processor.py  feature_visualizer.py  prediction_visualizer.py  repository.py  xgboost.py  xgboost_prediction_service.py
src/forecasting/wind/: model_protocol.py  plotting.py  plotting_service.py  repository.py  sarimax_model.py  service.py
src/gateways/: entsoe_gateway.py
src/mlflow_service/: tracking.py
src/services/: entsoe_service.py
