[project]
name = "carbon-intensity-forecasting"
authors = [
    {name = "Duta Andrei-Sebastian", email = "sebiduta2004@gmail.com"}
]
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "entsoe-py>=0.7.11",
    "pydantic-settings>=2.13.1",
    "sqlalchemy[asyncio]>=2.0.48",
    "sqlalchemy-timescaledb>=0.4.1",
    "openpyxl>=3.1.5",
    "matplotlib>=3.10.9",
    "statsmodels>=0.14.6",
    "mlflow>=3.12.0",
    "geopy>=2.4.1",
    "plotly>=6.7.0",
    "scipy>=1.17.1",
    "pmdarima>=2.1.1",
    "holidays>=0.96",
    "open-meteo>=0.4.0",
    "openmeteo-requests>=1.7.5",
    "seaborn>=0.13.2",
    "bitsandbytes>=0.49.2",
    "accelerate>=1.14.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "torchaudio>=2.11.0",
    "xgboost>=3.2.0",
    "optuna>=4.9.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.hatch.build.targets.wheel]
packages = ["src/core", "src/database", "src/data_pipeline"]
